# restful-api-project/src/server.ts
@@ -1,14 +1,10 @@
-import express from 'express';
-import cors from 'cors';
 import dotenv from 'dotenv';
-import usuarioRoutes from './routes/usuario.routes';
+import app from './app';
 
 dotenv.config();
-const app = express();
-
-app.use(cors());
-app.use(express.json());
-app.use('/usuarios', usuarioRoutes);
 
 const PORT = process.env.PORT || 3000;
-app.listen(PORT, () => console.log(`Servidor rodando na porta ${PORT}`));
+
+app.listen(PORT, () => {
+  console.log(`Servidor rodando na porta ${PORT}`);
+});
